fixxed css not showing correctly after layout change

--- a/src/assests/css/base/_global.pcss
+++ b/src/assests/css/base/_global.pcss
@@ -32,10 +32,10 @@ a {
 }
 .or {
   @mixin atSmall {
-    grid-column: span 3;
+    grid-column: 1 / span 3;
   }
   @mixin atMedium {
-    grid-column: span 3;
+    grid-column: 1 / span 3;
   }
 }
 .short {
