--- a/src/assests/css/modules/_class.pcss
+++ b/src/assests/css/modules/_class.pcss
@@ -21,6 +21,7 @@
     &-sub {
       @mixin atSmall {
         font-size: 1.125rem;
+        grid-column: span 3;
       }
     }
     &-choose {
